--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="game-container">
         <h2 class="game-title">Adivina la Plabra</h2>
-        <iframe src="https://lapalabradeldia.com/" width="800" height="500"></iframe>
+        <iframe src="https://lapalabradeldia.com/archivo/normal/33/" width="800" height="500"></iframe>
     </div>
 </body>
 </html>
